--- a/src/index.css
+++ b/src/index.css
@@ -2,3 +2,17 @@
    background-color: rgba(255, 255, 255, 0.3);
    border-radius: 10px;
 }
+img{
+    height: 350px;
+    border-radius: 30px;
+    margin-bottom: 30px;
+}
+.summery-title{
+    background-color: rgba(245, 255, 98, 0.897);
+    padding: 10px;
+    border-radius: 30px;
+    color: rgb(255, 255, 255);
+}
+.bg-image{
+    background-image: url("/public/summerBlog.png");
+}
